--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-graphql-generator-helper-lib",
-  "version": "0.0.22",
+  "version": "0.0.24",
   "description": "A tool for generating React and TypeScript code from a GraphQL Schema",
   "repository": "https://github.com/bonham000/react-graphql-generator.git",
   "author": "Sean Smith <sean.smith.2009@gmail.com>",
@@ -21,7 +21,7 @@
     "gql": "gqlg --schemaFilePath ./schema.graphql --destDirPath ./schema --depthLimit 5",
     "dev": "yarn build && node lib/program.js --outputFile=./graphql --configFile=./codegen.yml",
     "dev:url": "yarn build && node lib/program.js --outputFile=./graphql --configFile=./codegen.yml",
-    "prepublish": "yarn test && yarn build && yarn dev"
+    "prepare": "yarn test && yarn build && yarn dev"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.4",
@@ -36,7 +36,8 @@
     "dotenv": "^8.0.0",
     "gql-generator": "^1.0.12",
     "graphql": "^14.4.2",
-    "graphql-tag": "^2.0.0"
+    "graphql-tag": "^2.0.0",
+    "@types/graphql": "^14.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -45,7 +46,6 @@
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.3",
     "@types/dotenv": "^6.1.1",
-    "@types/graphql": "^14.2.2",
     "@types/rimraf": "^2.0.2",
     "prettier": "^1.18.2",
     "tslint": "^5.18.0",
