--- a/codegen.yml
+++ b/codegen.yml
@@ -3,6 +3,9 @@ overwrite: true
 schema: schema.graphql
 documents: schema_documents/**/*.gql
 generates:
+  graphql/introspection-result.json:
+    plugins:
+      - fragment-matcher
   graphql/index.tsx:
     plugins:
       - typescript
