--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
   "dependencies": {
     "@babel/runtime": "^7.5.4",
     "@graphql-codegen/cli": "^1.4.0",
+    "@graphql-codegen/fragment-matcher": "^1.4.0",
     "@graphql-codegen/introspection": "1.4.0",
     "@graphql-codegen/typescript": "1.4.0",
     "@graphql-codegen/typescript-operations": "1.4.0",
     "@graphql-codegen/typescript-react-apollo": "1.4.0",
     "@graphql-codegen/typescript-resolvers": "^1.4.0",
+    "@types/graphql": "^14.2.2",
     "axios": "^0.19.0",
     "commander": "^2.20.0",
     "dotenv": "^8.0.0",
     "gql-generator": "^1.0.12",
     "graphql": "^14.4.2",
-    "graphql-tag": "^2.0.0",
-    "@types/graphql": "^14.2.2"
+    "graphql-tag": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
