--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "yarn prettier && yarn tslint && yarn tsc",
     "build": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "codegen": "graphql-codegen --config codegen.yml",
-    "gql": "gqlg --schemaFilePath ./schema.graphql --destDirPath ./schema --depthLimit 5",
+    "gql:lib": "gqlg --schemaFilePath ./schema.graphql --destDirPath ./schema --depthLimit 5",
+    "gql": "node gql-lib/gql.js --schemaFilePath ./schema.graphql --destDirPath ./schema --depthLimit 5",
     "dev": "yarn build && node lib/program.js --outputFile=./graphql --configFile=./codegen.yml",
     "dev:url": "yarn build && node lib/program.js --outputFile=./graphql --configFile=./codegen.yml",
     "prepare": "yarn test && yarn build && yarn dev"
