--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-graphql-generator-helper-lib",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "description": "A tool for generating React and TypeScript code from a GraphQL Schema",
   "repository": "https://github.com/bonham000/react-graphql-generator.git",
   "author": "Sean Smith <sean.smith.2009@gmail.com>",
@@ -8,7 +8,8 @@
   "private": false,
   "main": "lib/program.js",
   "bin": {
-    "graphql-build": "./lib/program.js"
+    "graphql-build": "./lib/program.js",
+    "gql-lib": "./gql-lib/gql.js"
   },
   "scripts": {
     "prettier": "prettier --list-different './src/**/*.{ts,tsx}'",
